[gd_scene load_steps=4 format=3 uid="uid://l4mcohyps04y"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_do3bk"]
[ext_resource type="Texture2D" uid="uid://bk7ruocqpx521" path="res://art/origbig.png" id="2_tci46"]
[ext_resource type="Texture2D" uid="uid://cj4mdv7gyp613" path="res://art/AIGeneratedLogo.png" id="3_2nje7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -10.0
offset_right = 7.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_do3bk")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tci46")
expand_mode = 3

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -165.0
offset_right = -73.0
offset_bottom = -29.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.45548, 1.02607)

[node name="PlayButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Settings"

[node name="ScoreboardButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Scoreboard"

[node name="ExitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = "Exit"

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_top = 10.0
offset_right = 184.0
offset_bottom = 33.0
text = "Project : Cherryblossom"

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -65.0
offset_right = 255.0
offset_bottom = 147.0
grow_vertical = 0
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_2nje7")
